# vlotus

./: CLAUDE.md  Cargo.toml  DEVELOPMENT.md  KEYMAP.md  LICENSE-APACHE  README.md  USER-GUIDE.md  dist-workspace.toml  pyproject.toml
.github/workflows/: build-pypi.yml  publish-pypi.yml  release.yml  test.yml
src/: app.rs  datetime.rs  format.rs  hyperlink.rs  main.rs  patch_cli.rs  shell.rs  snapshots.rs  theme.rs  tutor.rs  ui.rs
src/snapshots/: vlotus__snapshots__snapshot_clipboard_mark_perimeter.snap  vlotus__snapshots__snapshot_color_picker_hex_mode.snap  vlotus__snapshots__snapshot_color_picker_open.snap  vlotus__snapshots__snapshot_command_prompt.snap  vlotus__snapshots__snapshot_currency_formatted_grid.snap  vlotus__snapshots__snapshot_datetime_autostyle.snap  vlotus__snapshots__snapshot_datetime_friendly_display.snap  vlotus__snapshots__snapshot_formula_ref_highlight.snap  vlotus__snapshots__snapshot_full_format_grid.snap  vlotus__snapshots__snapshot_hyperlink_autostyle.snap  vlotus__snapshots__snapshot_hyperlink_function_renders_label.snap  vlotus__snapshots__snapshot_insert_mode_mid_edit.snap  vlotus__snapshots__snapshot_multi_tab_workbook_second_active.snap  vlotus__snapshots__snapshot_normal_mode_with_filled_cells.snap  vlotus__snapshots__snapshot_pointing_active_shows_point_submode_in_banner.snap  vlotus__snapshots__snapshot_search_active_with_matches.snap  vlotus__snapshots__snapshot_search_prompt.snap  vlotus__snapshots__snapshot_showcmd_pending_5d.snap  vlotus__snapshots__snapshot_showcmd_pending_g_with_count.snap  (+6 more)
src/store/: cells.rs  columns.rs  (+8 more)
